Add autoconf and libtool to lava32 container for dev

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -73,3 +73,6 @@ RUN apt-get install -y locales
 RUN locale-gen C.UTF-8
 RUN locale -a
 RUN update-locale LANG=C.UTF-8
+
+# Having autoconf in the container will make building autotools packages easier
+RUN apt-get install -y autoconf libtool m4 automake
