adjust to the local environments

--- a/tools/lavaODB/src/CMakeLists.txt
+++ b/tools/lavaODB/src/CMakeLists.txt
@@ -37,6 +37,7 @@ target_include_directories(lava-odb_x32 BEFORE
     ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 add_library(lava-odb_x64 STATIC ${GENERATED}/lava-odb.cxx)
+target_compile_options(lava-odb_x64 PRIVATE -D_GLIBCXX_USE_CXX11_ABI=0)
 set_property(TARGET lava-odb_x64 PROPERTY CXX_STANDARD 11)
 target_link_libraries(lava-odb_x64 odb odb-pgsql)
 add_dependencies(lava-odb_x64 cleanup)
