add duasan into setup script

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -42,5 +42,6 @@ add_subdirectory(lavaODB)
 add_subdirectory(lavaDB)
 add_subdirectory(lavaTool)
 add_subdirectory(fbi)
+add_subdirectory(duasan)
 
 include(CPackConfig.txt)
