--- a/tools/duasan/src/CMakeLists.txt
+++ b/tools/duasan/src/CMakeLists.txt
@@ -41,8 +41,9 @@ include_directories(${LLVM_INCLUDE_DIRS})
 
 # duasan target compiled against llvm, /*omg*/, odb odb-pgsql and lava odb
 add_executable(duasan duasan.cpp)
-target_compile_options(duasan PRIVATE -fno-omit-frame-pointer -O3 -fexceptions -frtti)
-set_target_properties(duasan PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32 -flto -fuse-ld=gold")
+target_compile_options(duasan PRIVATE -D_GLIBCXX_USE_CXX11_ABI=0 -fno-omit-frame-pointer -O3 -fexceptions -frtti)
+#set_target_properties(duasan PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32 -flto -fuse-ld=gold")
+set_target_properties(duasan PROPERTIES LINK_FLAGS "-flto -fuse-ld=gold")
 set_property(TARGET duasan PROPERTY CXX_STANDARD 14)
 target_include_directories(duasan BEFORE
         PUBLIC
@@ -55,7 +56,7 @@ target_include_directories(duasan BEFORE
 
 # omg is pre-built in lavaTool, just link if needed
 #target_link_libraries(duasan lavaDB_x32 omg odb odb-pgsql lava-odb_x32 ${LLVM_CLANG_LINK_LIBRARIES})
-target_link_libraries(duasan lavaDB_x32 odb odb-pgsql lava-odb_x32 ${LLVM_CLANG_LINK_LIBRARIES})
+target_link_libraries(duasan lavaDB_x64 odb odb-pgsql lava-odb_x64 ${LLVM_CLANG_LINK_LIBRARIES})
 
 install (TARGETS duasan
          RUNTIME DESTINATION bin
