--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "panda/src"]
 	path = panda/src
-	url = https://github.com/panda-re/panda.git
+	url = https://github.com/dnivra/panda.git
+	branch = dev
