OK, extracted the compile steps into install folder. I will likely keep python script to update password seperate. Also really need to try building from the existing docker from panda

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install all requirements
-      run: sh install.sh
+      run: bash install.sh
 
     - name: Confirm Lava tests work as expected
       run: echo "Hello!"
