--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -2,7 +2,7 @@ SQLAlchemy==2.0.25
 pyzmq==23.2.1
 psycopg2-binary==2.9.9
 tabulate==0.9.0
-pexpect==4.9.0
+pexpect>=4.9.0
 psutil==5.9.8
 ipython==7.16.3
 colorama==0.4.6
