--- a/tools/btrace/CMakeLists.txt
+++ b/tools/btrace/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Define the project
 project(sw_btrace C)
+include(GNUInstallDirs)
 
 # Set the C standard to C99
 set(CMAKE_C_STANDARD 99)
@@ -19,13 +20,9 @@ set(SOURCES
 add_library(sw_btrace SHARED ${SOURCES})
 set_target_properties(sw_btrace PROPERTIES OUTPUT_NAME "sw-btrace")
 
-# Define the output directory for the library
-set(LIBEXEC_DIR "${CMAKE_SOURCE_DIR}/libexec")
-
-# Add a custom command to copy the library to the libexec directory
-add_custom_command(
-    TARGET sw_btrace POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBEXEC_DIR}
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:sw_btrace> ${LIBEXEC_DIR}
-    COMMENT "Moving libsw-btrace.so to ${LIBEXEC_DIR}"
+# Install the shared library using GNUInstallDirs
+install(TARGETS sw_btrace
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}  # For shared libraries
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}  # For executables (if applicable)
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}  # For static libraries (if applicable)
 )
